# Scientific-Calculator

./: CMakeLists.txt  README.md  main.cpp
includes/: ArithmeticExprSolver.h  Calculator.h  ExprSolver.h  Matrix.h  MatrixExprSolver.h  SciCalculator.h  Token.h  calclib.h  tokens.h
src/: ArithmeticExprSolver.cpp  ExprSolver.cpp  Matrix.cpp  MatrixExprSolver.cpp  SciCalculator.cpp  Token.cpp  calclib.cpp  tokens.cpp
